# icap-poc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  build.rs
docs/: draft-icap-extension-206-07.txt
examples/: server.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_chunk_header.rs  parse_encapsulated_list.rs
src/: common.rs  decoder.rs  errors.rs  lib.rs  server.rs  service.rs
src/common/: http_request.rs  http_response.rs  icap_request.rs  id.rs  method.rs  service_fn.rs  version.rs
src/decoder/: encapsulated.rs  macros.rs  maps.rs
src/header/: header_indices.rs  header_iterator.rs  header_name.rs  header_value.rs  mod.rs
src/server/: config.rs  config_builder.rs  connection.rs  request_context.rs  tcp_acceptor.rs
src/service/: error_code.rs
