[package]
name = "icap-poc"
version = "0.0.1"
edition = "2021"

[dependencies]
bytes = "1.2.1"
cds = "0.10.0"
http = "0.2.8"
httparse = { git = "https://github.com/r-bk/httparse", rev = "c1437d4" }
thiserror = "1.0.36"
tokio = { version = "1", features = ["rt", "net", "time", "io-util"], default-features = false }
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.15"
tracing-test = "0.2.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
